monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4015/A4015.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4015;

grammar A4015 {

  token A = "a"?;

}
